--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -58,13 +58,14 @@
   border-radius: 3px;
 }
 
-.form__category-input {
+.form__category-select {
   padding: 10px;
   width: 20%;
   height: 50px;
   border-width: 1.25px;
   border-radius: 3px;
   margin-left: 10px;
+  background-color: #fff;
 }
 
 .form__todo-create-button {
@@ -116,6 +117,11 @@ td, th{
 }
 
 .table_show-todo input {
+  width: 100%;
+  border-style: none;
+}
+
+.table_show-todo select {
   width: 100%;
   border-style: none;
 }
